--- a/latex/sections/theory.tex
+++ b/latex/sections/theory.tex
@@ -30,7 +30,7 @@ The radial velocity method relies on the well-known Doppler effect. Ignoring ter
 
 where $\lambda$ is the observed wavelength, $\lambda_0$ the emitted wavelength, $\Phi$ the Newtonian gravitational potential at the source $(\Phi=G M / r$ at a distance $r$ of a spherically symmetric mass $M$ ), $\textbf{k}$ the unit vector pointing from the observer to the source, $\textbf{v}$ the velocity of the source relative to the observer and $c$ the speed of light. This formula accounts for both special relativistic effects and the gravitational Doppler shift described by general relativity\cite{doppler_shift_GR_formula}.
  
-As we are dealing with velocity shifts on the order of meters or centimeters per second, we can safely ignore special relativistic effects and thus cross out the third term in the denominator. The gravitational Doppler shift is independent of the motion of the star but instead depends on its mass and radius. The Sun has a mass loss rate of about $3 \times 10^{-12}$ \% per year\cite{carroll2017introduction}. If we assume a similar mass loss rate for the stars used in this study (which all have masses close to that of the Sun), we can safely assume that the gravitational effect is negligable and omit the second term from the denominator.
+As we are dealing with velocity shifts on the order of meters or centimeters per second, we can safely ignore special relativistic effects and thus cross out the third term in the denominator. The gravitational Doppler shift is independent of the motion of the star but instead depends on its mass and radius. The Sun has a mass loss rate of about $3 \times 10^{-12}$ \% per year\cite{carroll2017introduction}. If we assume a similar mass loss rate for the stars used in this study (which all have masses close to that of the Sun), we can safely assume that the gravitational effect is constant, and since we are computing only relative shifts we can ignore it and omit the second term from the denominator.
 
 If the unit vector $\textbf{k}$ were pointing directly toward us, it would mean that we were observing the system in the plane of orbit. This is however unlikely. Since we don't know the inclination angle, a possible simplification is to omit $\textbf{k}$ and treat the resulting $\textbf{v}$ as a minimum radial velocity. Thus, we are left with 
 
