Now really done! (with report)

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,6 +1,5 @@
 \documentclass{article}
 \usepackage[a4paper]{geometry}
-% \usepackage[english, science, hyperref, titlepage]{ku-frontpage} %Laver KU-forside.
 \usepackage[english, science]{ku-frontpage}
 \usepackage[utf8]{inputenc}
 \usepackage{soul}
@@ -119,7 +118,7 @@ In the beginning of February 2022, Troels C. Petersen (UCPH) and Lars A. Buchhav
 \input{sections/acknowledgements} 
 
 % Bibliography
-\newpage
+% \newpage
 \nocite{*}
 \bibliographystyle{plain}
 \bibliography{references.bib}
