--- a/latex/sections/data_analysis.tex
+++ b/latex/sections/data_analysis.tex
@@ -255,7 +255,7 @@ In this section, I will describe and explain methods for performing LFC calibrat
     \end{SCfigure}
 
 
-    Although the number of computations necessary for the described analysis is high, it is possible to run for 188 observations on a powerful laptop in about 2 hours. More run-times are listed in appendix \ref{appendix:RV_extraction}. The implementation of the described methods is hosted on GitHub\footnote{\url{https://github.com/Harteg/LFC_calibration_RV_extractions}}. 
+    Although the number of computations necessary for the described analysis is high, it is possible to run for 188 observations on a powerful laptop in about 2 hours. More run-times are listed in appendix \ref{appendix:RV_extraction}. The implementation of the described methods is hosted on GitHub\footnote{\href{https://github.com/Harteg/LFC-calibration-RV-extractions}{\textit{https://github.com/Harteg/LFC-calibration-RV-extractions}}}. 
 
     
     
