--- a/latex/sections/discussion.tex
+++ b/latex/sections/discussion.tex
@@ -1,7 +1,6 @@
+For the calibration, my best solution was the cubic-spline interpolation, with which I got a per-line rms of 10.0 m/s. This is not of much help in the pursuit of RV precision to centimeters per second and nowhere near that of Excalibur, which, utilizing 1227 LFC exposures with various filtering of unstable lines and denoising techniques, achieves an rms of 3.3 cm/s \cite{zhao2021excalibur}. I used only one LFC exposure and performed no filtering. The spread of the residuals plotted in figure \ref{fig:calib_poly_vs_interp} is however not far from that of Zhao et al. (figure 2 in \cite{zhao2021excalibur}).
 
-For the calibration, my best solution was the cubic-spline interpolation, with which I got a per-line rms of 10.0 m/s. This is not of much help in the pursuit of rv precision to centimeters per second and nowhere near that of Excalibur, which, obviously using more advanced techniques, achieves an rms of 3.3 cm/s \cite{zhao2021excalibur}.
-
-The results from analyzing the non-barycentric-corrected data were not on point. I measured one Earth-year to be $\sim$366.5 days with a very small uncertainty. One day off. If EXPRES should be capable of measuring stellar RV to a precision of a dozen centimeters per second, I think I should be able to get this value right. However, considering the crudeness of my method and especially the resulting very large spread of the RVs computed for individual features (as seen in figure \ref{fig:median-mean-weighted-average}), it is perhaps not surprising, but rather justifies the decade-long development of much more advanced RV extraction methods.
+The results from analyzing the non-barycentric-corrected data were not entirely satisfactory. I measured one Earth-year to $\sim$366.5 days with a very small uncertainty. One day off. If EXPRES should be capable of measuring stellar RV to a precision of a dozen centimeters per second, I think I should be able to get this value right. However, considering the crudeness of my method and especially the resulting very large spread of the RVs computed for individual features (as seen in figure \ref{fig:median-mean-weighted-average}), it is perhaps not surprising, but rather justifies the decade-long development of much more advanced RV extraction methods.
 
 Nevertheless, the signal is there. And, comparing my results for the barycentric-corrected data to that of Zhao et al. is also quite positive. RVs on the same order and many patterns in their results coincide with mine. The residuals from subtracting their results from mine are however quite large. For all four stars analyzed my rms also comes out smaller than theirs. This might be due to my match filtering, which is biased toward selecting features that are closer together if those features do not differ too much in shape.
 
