--- a/latex/references.bib
+++ b/latex/references.bib
@@ -73,7 +73,8 @@
   number={2},
   pages={80},
   year={2021},
-  publisher={IOP Publishing}
+  publisher={IOP Publishing},
+  note ={\url{https://arxiv.org/abs/2010.13786} (accessed: 2022-05-15)}
 }
 
 @misc{yale_data,
@@ -81,7 +82,7 @@
   title={EXPRES Stellar-Signals Project},
   publisher={Yale University},
   howpublished={\url{https://exoplanets.astro.yale.edu/science/activity.php}},
-  note = {Accessed: 2022-05-15}
+  note = {(accessed: 2022-05-15)}
 }    
 
 @misc{excalibur_github,
@@ -91,7 +92,7 @@
   publisher = {GitHub},
   journal = {GitHub repository},
   howpublished = {\url{https://github.com/lilylingzhao/excalibur}},
-  note = {Accessed: 2022-05-15}
+  note = {(accessed: 2022-05-15)}
 }
 
 @book{carroll2017introduction,
