Moved RV results files to kdrive

--- a/RV_computation_chunks.ipynb
+++ b/RV_computation_chunks.ipynb
@@ -432,7 +432,7 @@
     "        \n",
     "    print(\"Finished!\")\n",
     "\n",
-    "    # np.save(\"lily_data_results/15th_chunk_34411_ms_bary\", [result, coords])"
+    "    # np.save(RV_RESULTS_PATH + \"15th_chunk_34411_ms_bary\", [result, coords])"
    ]
   },
   {
@@ -491,7 +491,7 @@
     "    return diff_matrix, diff_matrix_err, diff_matrix_valid\n",
     "\n",
     "\n",
-    "result, coords = np.load(\"lily_data_results/15th_chunk_34411_ms_bary_error_fix.npy\", allow_pickle=True)\n",
+    "result, coords = np.load(RV_RESULTS_PATH + \"15th_chunk_34411_ms_bary_error_fix.npy\", allow_pickle=True)\n",
     "plot_matrix(*parse_2(result, coords))"
    ]
   },
