--- a/RV_computation_orders.ipynb
+++ b/RV_computation_orders.ipynb
@@ -265,7 +265,7 @@
     "        \n",
     "    print(\"Finished!\")\n",
     "\n",
-    "    # np.save(\"lily_data_results/all_orders_34411_bary_ms\", [result, coords])"
+    "    # np.save(RV_RESULTS_PATH + \"all_orders_34411_bary_ms\", [result, coords])"
    ]
   },
   {
@@ -322,8 +322,8 @@
     }
    ],
    "source": [
-    "# file = \"lily_data_results/51_peg_all_orders.npy\"\n",
-    "file = \"lily_data_results/all_orders_34411_bary_ms.npy\"\n",
+    "# file = RV_RESULTS_PATH + \"51_peg_all_orders.npy\"\n",
+    "file = RV_RESULTS_PATH + \"all_orders_34411_bary_ms.npy\"\n",
     "result, coords = np.load(file, allow_pickle=True)\n",
     "plot_matrix(*parse_matrix_results_df(result, coords))\n",
     "m, final_shifts, final_shifts_err, days = matrix_reduce_results_file_df(file, SPECTRA_PATH_34411, plot=True)"
