--- a/RV_fixes.ipynb
+++ b/RV_fixes.ipynb
@@ -468,7 +468,7 @@
     }
    ],
    "source": [
-    "result, coords = np.load(\"lily_data_results/all_features_34411_ms_bary.npy\", allow_pickle=True)\n",
+    "result, coords = np.load(RV_RESULTS_PATH + \"all_features_34411_ms_bary.npy\", allow_pickle=True)\n",
     "\n",
     "T, T_rem = [], []\n",
     "for r in result:\n",
@@ -1064,7 +1064,7 @@
     "        result.append(r)\n",
     "        \n",
     "\n",
-    "    np.save(\"lily_data_results/flipper\", [result, all_coords])\n",
+    "    np.save(RV_RESULTS_PATH + \"flipper\", [result, all_coords])\n",
     "    print(\"Finished!\")\n"
    ]
   },
@@ -1106,7 +1106,7 @@
     }
    ],
    "source": [
-    "file = \"lily_data_results/flipper.npy\"\n",
+    "file = RV_RESULTS_PATH + \"flipper.npy\"\n",
     "result, coords = np.load(file, allow_pickle=True)\n",
     "filter_result = remove_outliers_from_result_with_chauvenet(result)\n",
     "matrix = parse_matrix_results(filter_result, coords, median_err=True)\n",
