--- a/rv_plots.ipynb
+++ b/rv_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filename = \"lily_data_results/all_features_34411_ms_non_bary.npy\"\n",
-    "filename = \"lily_data_results/34411_all_baryFalse_err1_dist1_area01.npy\"\n",
+    "# filename = RV_RESULTS_PATH + \"all_features_34411_ms_non_bary.npy\"\n",
+    "filename = RV_RESULTS_PATH + \"34411_all_baryFalse_err1_dist1_area01.npy\"\n",
     "result, coords = np.load(filename, allow_pickle=True)\n",
     "diff_matrix, diff_matrix_err, diff_matrix_valid = parse_matrix_results(result, coords)\n",
     "m, final_shifts, final_shifts_err, days = matrix_reduce(diff_matrix, diff_matrix_err, diff_matrix_valid, SPECTRA_PATH_34411, plot=False, with_date_duplicates=True)"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rv, rv_err, days = prepare_data_for_plot(\"lily_data_results/34411_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_34411)"
+    "rv, rv_err, days = prepare_data_for_plot(RV_RESULTS_PATH + \"34411_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_34411)"
    ]
   },
   {
@@ -244,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HD101501 = prepare_data_for_plot(\"lily_data_results/101501_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_101501)"
+    "HD101501 = prepare_data_for_plot(RV_RESULTS_PATH + \"101501_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_101501)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
    "source": [
     "plot_compare_lily(*HD101501, \n",
     "    lily_data_file=\"101501_activity.csv\",\n",
-    "    save_as=\"latex/figures/HD101501_barycentric_rv_vs_lily.pdf\",\n",
+    "    # save_as=\"latex/figures/HD101501_barycentric_rv_vs_lily.pdf\",\n",
     "    star_name=\"HD 101501\",\n",
     "    padding_top=6,\n",
     "    padding_bottom=2,\n",
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HD10700 = prepare_data_for_plot(\"lily_data_results/10700_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_10700)"
+    "HD10700 = prepare_data_for_plot(RV_RESULTS_PATH + \"10700_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_10700)"
    ]
   },
   {
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HD26965 = prepare_data_for_plot(\"lily_data_results/26965_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_26965)"
+    "HD26965 = prepare_data_for_plot(RV_RESULTS_PATH + \"26965_all_baryTrue_err1_dist05_area02_chi2.npy\", path=SPECTRA_PATH_26965)"
    ]
   },
   {
