Individual feature analysis

--- a/RV_errors.ipynb
+++ b/RV_errors.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "\n",
     "# Setup coords :: Compute one list of coords\n",
-    "all_coords = compute_coords(filenames)        \n",
+    "all_coords = compute_coords(len(filenames))        \n",
     "        \n",
     "# Define function for each process\n",
     "def compute(coords):\n",
